--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Three.js tutorial</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="./three.js"></script>
 </head>
 <body>
+    <script src="./node_modules/three/build/three.min.js"></script>
     <script src="./main.js"></script>
+
+    <div style="width:100%;height:50px;text-align:center;color:white;" class="ui">Three.js를 활용한 torus의 3d triangle mesh exporter 구현</div>
+    <button style="right:0;width:10%;height:50px;" id="exportBtn" class="ui">Export</button>
 </body>
 </html>
